--- a/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
+++ b/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
@@ -12,12 +12,15 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Grasshopper" Version="7.9.21222.15001" IncludeAssets="compile;build" />
+    <PackageReference Include="ILGPU" Version="1.1.0" />
+    <PackageReference Include="ILGPU.Algorithms" Version="1.1.0" />
     <PackageReference Include="Microsoft.ML" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.CpuMath" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.DataView" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
   
   <ItemGroup>
