--- a/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
+++ b/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="CsvHelper" Version="27.2.1" />
     <PackageReference Include="Grasshopper" Version="7.9.21222.15001" IncludeAssets="compile;build" />
     <PackageReference Include="ILGPU" Version="1.1.0" />
-    <PackageReference Include="ILGPU.Algorithms" Version="1.1.0" />
+    <PackageReference Include="ILGPU.Algorithms" Version="0.8.0" />
     <PackageReference Include="Microsoft.ML" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.CpuMath" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.DataView" Version="1.7.0" />
@@ -21,6 +21,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Reference Include="PresentationCore" />
   </ItemGroup>
   
   <ItemGroup>
