--- a/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
+++ b/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
@@ -7,6 +7,7 @@
     <Description>Description of SeemoPredictor</Description>
     <TargetExt>.gha</TargetExt>
     <Platforms>AnyCPU;x64</Platforms>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   
   <ItemGroup>
