--- a/SeemoPredictor/NullEngine/NullEngine.csproj
+++ b/SeemoPredictor/NullEngine/NullEngine.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
@@ -16,10 +16,6 @@
     <PackageReference Include="RhinoCommon" Version="7.18.22124.3001" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <PackageReference Include="System.Text.Json" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\SeemoPredictor\SeemoPredictor.csproj" />
   </ItemGroup>
 
 </Project>
