--- a/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
+++ b/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\NullEngine\NullEngine.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
