--- a/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
+++ b/SeemoPredictor/SeemoPredictor/SeemoPredictor.csproj
@@ -12,13 +12,14 @@
   
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.2.1" />
-    <PackageReference Include="Grasshopper" Version="7.9.21222.15001" IncludeAssets="compile;build" />
+    <PackageReference Include="Grasshopper" Version="7.18.22124.3001" IncludeAssets="compile;build" />
     <PackageReference Include="Microsoft.ML" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.CpuMath" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.DataView" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+    <PackageReference Include="RhinoCommon" Version="7.18.22124.3001" />
   </ItemGroup>
   
   <ItemGroup>
