--- a/SeemoPredictor/Nullgh/Nullgh.csproj
+++ b/SeemoPredictor/Nullgh/Nullgh.csproj
@@ -7,14 +7,18 @@
     <Description>Description of Nullgh</Description>
     <TargetExt>.gha</TargetExt>
     <Platforms>AnyCPU;x64</Platforms>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="CjClutter.ObjLoader" Version="1.0.0" />
     <PackageReference Include="Grasshopper" Version="7.18.22124.3001" IncludeAssets="compile;build" />
-    <PackageReference Include="ILGPU" Version="1.2.0" />
-    <PackageReference Include="ILGPU.Algorithms" Version="1.2.0" />
+    <PackageReference Include="ILGPU" Version="1.5.1">
+      <IncludeAssets></IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="ILGPU.Algorithms" Version="1.5.1">
+      <IncludeAssets>compile;build</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="RhinoCommon" Version="7.18.22124.3001" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
